# zk-ballot-validation

./: Cargo.toml  README
benches/: max_budget_rated_voting.rs  no_budget_rated_voting.rs  proof_generation.rs  proof_verification.rs  ranked_voting.rs  setup.rs
benches/plotting_scripts/: max_budget_output.txt  no_budget_output.txt  pyproject.toml  ranked_v_output.txt  ranked_voting.py
docs/: max_budget_rated_voting.tex  no_budget_rated_voting.tex
fuzz/: Cargo.toml  Dockerfile
fuzz/fuzz_targets/: max_budget_rated_voting.rs  no_budget_rated_voting.rs  ranked_voting.rs
src/: lib.rs  main.rs
src/ballot_validation/: ranked_voting.rs
src/ballot_validation/rated_voting/: max_budget.rs  no_budget.rs
src/ranked_voting/: mod.rs  shuffle_proof.rs
src/rated_voting/: max_budget.rs  mod.rs  no_budget.rs  quadratic.rs
src/utils/: chunk_proofs.rs  mod.rs  ranked.rs
