[package]
name = "bulletproof"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
curve25519-dalek-ng = { version = "4.1", default-features = false, features = ["u64_backend"] }
merlin = "3.0"
bulletproofs = { version = "4.0", features = ["std"] }
ark-ec = "0.3"
ark-bls12-381 = "0.3"
ark-ff = "0.3"
ark-std = "0.4"
curdleproofs = "0.0.1"
