[package]
name = "zk_ballot_validation"
version = "0.1.0"
edition = "2021"

[lib]
name = "zk_ballot_validation"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
curve25519-dalek-ng = { version = "4.1", default-features = false, features = ["u64_backend"] }
merlin = "3.0"
bulletproofs = { version = "4.0", features = ["std"] }
ark-ec = "0.3"
ark-bls12-381 = "0.3"
ark-ff = "0.3"
ark-std = "0.4"
curdleproofs = "0.0.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "proof_generation"
harness = false

[[bench]]
name = "proof_verification"
harness = false