[package]
name = "zk_ballot_validation-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
curve25519-dalek = "4.1.1"
merlin = "3.0"
rand = "0.8"

[dependencies.zk_ballot_validation]
path = ".."

[[bin]]
name = "no_budget_rated_voting"
path = "fuzz_targets/no_budget_rated_voting.rs"
test = false
doc = false
bench = false

[[bin]]
name = "max_budget_rated_voting"
path = "fuzz_targets/max_budget_rated_voting.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ranked_voting"
path = "fuzz_targets/ranked_voting.rs"
test = false
doc = false
bench = false